--- a/src/components/TaskInput.module.css
+++ b/src/components/TaskInput.module.css
@@ -8,8 +8,9 @@
 
 .Input {
   flex: 1;
-  height: 100%;;
+  height: 100%;
   color: white;
+  min-width: 0px;
   border-radius: 3px;
   padding: 0.2em 0.5em;
   background: rgba(153, 153, 157, 0.26);
